--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-node_modules
-node_modules
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.env.testing
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
+/storage/api-docs/api-docs.json
+storage/debugbar/
+public/inventory.sql
+public/done.sql
+mysql/
+supervisord.pid
+supervisord.log
