--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE="mazade"
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_DATABASE=erp_crf
+DB_USERNAME=root
+DB_PASSWORD="12345678"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
