--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Mazade
 APP_ENV=local
 APP_KEY=base64:4+3aRXuiGB29GsiXlgNA4XlmucJTvtia5bcytopSMgQ=
 APP_DEBUG=true
-APP_URL=http://mazade.com.local/
+APP_URL=http://mazade.local.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
